# autogen-rs

./: .gitignore  LICENSE  autogen-core-comparison-report.md  rust_autogen_core_analysis_report.md  rust_autogen_core_fix_plan.md  rust_autogen_core_quick_start.md  rust_autogen_core_state_persistence_example.rs  rust_autogen_core_state_persistence_implementation.md  rust_autogen_core_task_checklist.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
rust/: Cargo.toml  DEVELOPMENT_GUIDE.md
rust/autogen-core/: .env.example  COMPILATION_FIXES.md  Cargo.toml  ERROR_HANDLING_SUMMARY.md  README.md
rust/autogen-core/.taskmaster/: state.json
rust/autogen-core/benches/: error_handling_benchmarks.rs  performance_benchmarks.rs
rust/autogen-core/docs/: API_REFERENCE.md  BEST_PRACTICES.md  DEVELOPMENT_GUIDE.md  USER_GUIDE.md
rust/autogen-core/examples/: advanced_features.rs  advanced_patterns.rs  basic_tool_usage.rs  basic_usage.rs  error_handling.rs  improved_features.rs  performance_optimization.rs  routed_agent_example.rs  routed_agent_macro_example.rs
rust/autogen-core/src/: agent.rs  agent_factory.rs  agent_id.rs  agent_instantiation.rs  agent_metadata.rs  agent_proxy.rs  agent_runtime.rs  agent_type.rs  base_agent.rs  cache.rs  cache_store.rs  cancellation.rs  cancellation_token.rs  closure_agent.rs  component_config.rs  constants.rs  default_subscription.rs  default_topic.rs  error.rs  exceptions.rs  function_utils.rs  image.rs  intelligent_load_balancer.rs  intervention.rs  lib.rs  load_monitor.rs  logging.rs  macros.rs  message.rs  message_context.rs  message_handler_context.rs  message_v2.rs  priority_queue.rs  queue.rs  routed_agent.rs  routing.rs  routing_benchmarks.rs  runtime_impl_helpers.rs  serialization.rs  single_threaded_agent_runtime.rs  (+10 more)
rust/autogen-core/src/code_executor/: base.rs  func_with_reqs.rs  mod.rs
rust/autogen-core/src/exceptions/: tests.rs
rust/autogen-core/src/memory/: base_memory.rs  list_memory.rs  mod.rs
rust/autogen-core/src/model_context/: buffered_chat_completion_context.rs  buffered_context.rs  chat_completion_context.rs  head_and_tail_chat_completion_context.rs  head_and_tail_context.rs  mod.rs  token_limited_chat_completion_context.rs  token_limited_context.rs  unbounded_chat_completion_context.rs  unbounded_context.rs
rust/autogen-core/src/models/: mod.rs  model_client.rs  types.rs
rust/autogen-core/src/telemetry/: constants.rs  genai.rs  mod.rs  propagation.rs  tracing.rs  tracing_config.rs
rust/autogen-core/src/tool_agent/: caller_loop.rs  mod.rs  tool_agent.rs
rust/autogen-core/src/tools/: base.rs  base_tool.rs  function_tool.rs  mod.rs  static_workbench.rs  workbench.rs
rust/autogen-core/src/utils/: json_to_pydantic.rs  json_utils.rs  load_json.rs  mod.rs  schema_utils.rs
rust/autogen-core/tests/: async_binding_concurrency_test.rs  basic_compilation_test.rs  error_handling_integration_tests.rs  error_tests.rs  integration_tests.rs  routing_performance_tests.rs  runtime_fixes_test.rs  subscription_manager_test.rs  test_utils.rs
