[workspace]
members = ["autogen-core"]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.26"
opentelemetry-semantic-conventions = "0.26"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Image processing
image = "0.25"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections and utilities
dashmap = "6.0"
once_cell = "1.0"
parking_lot = "0.12"

# JSON schema and validation
jsonschema = "0.18"
schemars = { version = "0.8", features = ["uuid1"] }

# Configuration
config = "0.14"

# Testing
mockall = "0.13"