[package]
name = "autogen-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 现有依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
async-trait = "0.1"
lazy_static = "1.4.0"
image = "0.24"
base64 = "0.13"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
prost = "0.12"
prost-types = "0.12"
uuid = { version = "1.3", features = ["v4", "serde"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
futures = "0.3"

# 新增必需依赖
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 类型和配置管理
inventory = "0.3"
once_cell = "1.19"
dashmap = "5.5"

# JSON Schema 和验证
jsonschema = "0.17"
schemars = { version = "0.8", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

# 异步流处理
async-stream = "0.3"
pin-project = "1.1"

# 宏开发支持
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
dyn-clone = "1.0.19"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
